# CosmeticSystemManagement

./: CMakeLists.txt  README.md  app_router.h  flowlayout.cpp  flowlayout.h  icon.qrc  lsnx.h  main.cpp  sp.cpp  sp.h  spcardwidget.cpp
BACKEND/Cosmetic/: getPicturePath.cpp  product.cpp  productInfo.hpp  productSetter.cpp  shipment.hpp
BACKEND/CosmeticManagement/: ImportProduct.cpp  exportProduct.cpp  productFilter.cpp
BACKEND/ManageSystem/: ManageSystem.hpp
BACKEND/Trade/: TradeIn.cpp  TradeOut.cpp  getCurrentTime.cpp  trade.cpp  trade.h
BACKEND/TradeManagement/: TradeDataHandling.cpp  TradeFactory.h  TradeFilterConditions.h  TradeHandling.cpp  TradeManager.cpp
Comestic/: ShipmentsHandling.cpp  product.cpp  product.hpp  productIO.cpp  shipment.hpp
Cosmetic/: ShipmentsHandling.cpp  createProductID.cpp  getPicturePath.cpp  product.cpp  product.hpp  productIO.cpp  productInfo.hpp  shipment.hpp
CosmeticManagement/: ImportProduct.cpp  ProductHandling.cpp  Productfilter.h  exportProduct.cpp  product management.cpp  product management.h  product manager.cpp  product manager.h  productFilter.cpp  productFilter.h  productManager.cpp  productManager.h  readProductsData.cpp  saveProductsData.cpp
Data/ProductData/: ListProducts.txt  SP00001.txt  SP00002.txt  SP00003.txt  SP00005.txt  SP00006.txt  SP00008.txt  SP00009.txt
Data/TradeData/: 20250822120005_SP00004_1.txt  20250823174510_SP00003_1.txt  20250824103000_SP00001_0.txt  20250824113022_SP00002_0.txt  20250824153045_SP00002_1.txt  20250825101500_SP00001_0.txt  T00010.txt  TradeList.txt
LOGIN+TRANGCHU/UiUx/: MainMenu.ui  form.ui  login_form_gradient.ui  loginpage.cpp  loginpage.h  main.cpp  mainmenu.cpp  mainmenu.h
ManageSystem/: ManageSystem.hpp  declaration.hpp  libs.hpp  time.hpp
Product/: SP.ui
Trade/: TradeIO.cpp  TradeIn.cpp  TradeIn.h  TradeOut.cpp  TradeOut.h  client.h  createTradeID.cpp  getCurrentTime.cpp  lsnx.cpp  lsnx.ui  trade.cpp  trade.h
TradeManagement/: TradeDataHandling.cpp  TradeFactory.h  TradeHandling.cpp  TradeManagement.cpp  TradeManagement.h  TradeManager.cpp  TradeManager.h
UI/Login + Trang Chu/: CMakeLists.txt  MainMenu.ui  Resources.qrc  login_form_gradient.ui  loginpage.cpp  loginpage.h  loginpage.ui  mainmenu.cpp  mainmenu.h
Widget Card/: TradeCardWidget.cpp  TradeCardWidget.h  spcardwidget.h
